Add structure and logic of cart. Add, remove and clear products of cart

--- a/projects/06-shopping-cart/src/components/Products.css
+++ b/projects/06-shopping-cart/src/components/Products.css
@@ -39,3 +39,15 @@
   object-fit: cover;
   background: #fff;
 }
+
+.products button {
+  color: white;
+}
+
+.products button.remove {
+  background-color: red;
+}
+
+.products button.add {
+  background-color: #09f;
+}
